# CubikOS

./: .gitignore  README.md
Kernel/: Makefile  NOTES.md  README.md  STANDARD.md  meson.build
Kernel/arch/x86/: IOPort.h  Macros.h  X86_ACPI.cpp  X86_ACPI.h  X86_APIC.cpp  X86_APIC.h  X86_PIC.cpp  X86_PIC.h  X86_PIT.cpp  X86_PIT.h
Kernel/arch/x86_64/: acpi.h  apic.h  bootx64.c  bootx64.h  cpu.c  cpu.h  gdt.c  gdt.h  idt.c  idt.h  impl-acpi.c  impl-apic.c  interrupts.c  interrupts.h  ioports.h  paging.c  paging.h  pci.c  pci.h  pic.c  pic.h  pit.c  pit.h  processor.h  smbios.c  smbios.h  smp.c  smp.h  trampoline.asm
Kernel/docs/: ErrorCodes.md  MemoryAddress.md
Kernel/include/: Base.h  BaseTypes.h  Console.h  Debug.h  GenericArch.h  Interrupt.hpp  Macros.h  Math.h  Panic.h  String.h  Time.h  Timer.h  Types.h  device.h  macros.h  panic.h  startup.h  string.h  system.h
Kernel/include/FileSystem/: File.h
Kernel/include/Graphic/: GConsole.h  GraphicOutput.h  GraphicsDevice.h
Kernel/include/Memory/: Buddy.h  Memory.h  MemoryAllocation.h  MemoryFlags.h  MemoryRange.h  Paging.h  Slab.h  Slub.h  VMAllocator.h  Version.h
Kernel/include/Process/: Activity.h  ActivityScheduler.h  Process.h
Kernel/include/SecurityControl/: Permission.h
Kernel/include/Storage/: FsVolume  FsVolume.h
Kernel/include/Utils/: LinkedList.h  Spinlock.h
Kernel/include/boot/: bootinfo.h
Kernel/include/dev/: ahci.h  sata.h
Kernel/include/device/: Device.h  Keyboard.h
Kernel/include/filesys/: Volume.h
Kernel/include/fs/: vfs.h
Kernel/include/graphic/: framebuffer.h  terminal.h
Kernel/include/mem/: Buddy.h  KernelAlloc.h  Memory.h  MemoryAllocation.h  MemoryRange.h  Slub.h  address.h  bitmap.h  malloc.h  memory.h  page.h  slub.h
Kernel/include/mm/: bitmap.h  malloc.h  page.h  slub.h
Kernel/include/proc/: Activity.h  ActivityScheduler.h  Process.h  Task.h  activity.h  proc.h  sched.h  thread.h
Kernel/include/sys/: rt_info.h  user.h
Kernel/include/usr/: profile.h
Kernel/include/utils/: LinkedList.h  Spinlock.h  list.h  range.h  spinlock.h
Kernel/src/: Console.cpp  Kernel.cpp  Panic.cpp  String.cpp  Timer.cpp  panic.c  startup.c  string.c
Kernel/src/Device/: PS2LegacyKeyboard.cpp
Kernel/src/Graphic/: GraphicsDevice.cpp
Kernel/src/Memory/: Buddy.cpp  Memory.cpp  MemoryAllocation.cpp  MemoryBase.cpp  Paging.cpp  Slab.cpp  VMAllocator.cpp
Kernel/src/Process/: ActivityScheduler.cpp
Kernel/src/Utils/: LinkedList.cpp
Kernel/src/dev/: ahci.c
Kernel/src/device/: PS2LegacyKeyboard.cpp
Kernel/src/graphic/: GraphicsDevice.cpp  framebuffer.c  terminal.c
Kernel/src/mem/: Buddy.cpp  KernelAlloc.cpp  Memory.cpp  malloc.c  (+4 more)
(+111 files in other folders)
